# crablicator

./: .env.example  .gitignore  Cargo.toml  maint.rs.txt
src/: lib.rs  main.rs
src/bootstrap/: main.rs
src/crablicator/: main.rs  migrations.rs
src/generator/: categories.rs  main.rs
src/replicator/: dashboard.rs  main.rs  transformations.rs
src/util/: esdb.rs  stats.rs
