[package]
name = "crablicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
eventstore = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
dotenv = "0.15"
rand = "0.8"
futures = "0.3"
bytes = "1.1"

[[bin]]
name = "bootstrap"
path = "src/bootstrap/main.rs"

[[bin]]
name = "crablicator"
path = "src/crablicator/main.rs"
